--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ django-fsm
 redis==3.2.1
 stream-framework
 django-countries==6.1.3
+django-celery==3.3.1
+django-countries==6.1.3
+django-phonenumber-field==5.0.0
