--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ django-celery==3.3.1
 django-countries==6.1.3
 django-phonenumber-field==5.0.0
 django-address==0.2.5
-django-rest-framework==3.12.1
+djangorestframework==3.12.1
