--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+psycopg
 Django>=3.1,<3.2
 wagtail>=2.10,<2.11
 django-cors-headers==3.4.0
@@ -11,6 +12,7 @@ stream-framework
 django-countries==6.1.3
 django-celery==3.3.1
 django-countries==6.1.3
+django_phonenumbers
 django-phonenumber-field==5.0.0
 django-address==0.2.5
 djangorestframework==3.12.1
