--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-
+public/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
