--- a/seo.yaml
+++ b/seo.yaml
@@ -21,7 +21,8 @@ dynamic_keywords:
 
 
 inherited:
-  twitter_site: '....'
+  twitter_site: 'https://twitter.com/ProPlaymaker'
+  oglocale: 'PL'
 
 
 default:
@@ -34,18 +35,31 @@ default:
 
 /fantasy/:
   title: 'Fantasy | PlayMaker.pro'
-  description: 'Zapraszaj znajomych i rywalizuj z nimi w Fantasy dla niższych lig'
-  ogtitle: 'Fantasy'
-  ogdescription: 'PlayMaker.pro'
+  description: 'Zapraszaj znajomych piłkarzy i rywalizuj z nimi w grze Fantasy dla niższych lig'
+  ogtitle: 'Fantasy | PlayMaker.pro'
+  ogdescription: 'Zapraszaj znajomych piłkarzy i rywalizuj z nimi w grze Fantasy dla niższych lig'
   ogsite_name: 'https://playmaker.pro/fantasy/'
+  oimage: '/media/images/PlayMaker_logo.max-800x600.png'
+  ogurl: 'https://playmaker.pro/fantasy/'
+
+/tables/players/:
+  title: 'Baza piłkarzy | PlayMaker.pro'
+  description: 'Piłkarzy dołącz do bazy piłkarzy. Trenerze szukaj piłkarzy i zapraszaj ich na testy piłkarskie'
+  ogtitle: 'Baza piłkarzy | PlayMaker.pro''
+  ogdescription: 'Piłkarzy dołącz do bazy piłkarzy. Trenerze szukaj piłkarzy i zapraszaj ich na testy piłkarskie'
+  ogsite_name: 'https://playmaker.pro/tables/players/'
+  ogimage: '/media/images/PlayMaker_logo.max-800x600.png'
+  ogurl: 'https://playmaker.pro/tables/players/'
+
+
 
 dynamic:
   /users/player-*/:
     description: 
-    ogtitle: 'Pilakrsie CV {name}'
+    ogtitle: 'Profil piłkarza {name}'
     ogdescription:
     ossite_name:
     oimage: {image_path}
     otwitter:
-    tags: 'Fantasy {name}'
+    tags: 'Profil piłkarza {name}'
 
