--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==3.4.0
 django-allauth==0.42.0
 django-crispy-forms==1.9.2
 wagtail-blog==2.3.5
+wagtail-metadata==3.4.0
 easy-thumbnails==2.7
 django-fsm
 redis==3.2.1
