--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ django-phonenumber-field==5.0.0
 django-address==0.2.5
 djangorestframework==3.12.1
 django_compressor==2.4
+django-user-agents==0.4.0
