Added poetry to keep requirements and dependencies at bay

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,18 @@ django-crispy-forms==1.9.2
 wagtail-blog==2.3.5
 wagtail-metadata==3.4.0
 easy-thumbnails==2.7
-django-fsm
+django-fsm==2.7.1
 redis==3.2.1
-stream-framework
+stream-framework==1.3.7
 django-countries==6.1.3
 django-celery==3.3.1
 django-countries==6.1.3
-django_phonenumbers
+django_phonenumbers==1.0.1
 django-phonenumber-field==5.0.0
 django-address==0.2.5
 djangorestframework==3.12.1
 django_compressor==2.4
 django-user-agents==0.4.0
-pygments
-typing_extensions
+pygments==2.10.0
+typing_extensions==3.10.0.0
+poetry==1.1.11
