--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 psycopg2 = "^2.9.1"
+psycopg2-binary = "2.9.1"
 PyYAML = "5.4.1"
 Django = ">=3.1,<3.2"
 wagtail = ">=2.10,<2.11"
