--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 psycopg2
 PyYAML==5.4.1
-Django>=3.1,<3.2
-wagtail>=2.10,<2.11
+Django==3.2
+wagtail==2.13.5
 django-cors-headers==3.4.0
 django-allauth==0.42.0
 django-crispy-forms==1.9.2
 wagtail-blog==2.3.5
 wagtail-metadata==3.4.0
+pymemcache==3.5.2
 easy-thumbnails==2.7
 django-fsm==2.7.1
 redis==3.2.1
 stream-framework==1.3.7
 django-celery==3.3.1
-django-countries==6.1.3
+django-countries==7.1
 django_phonenumbers==1.0.1
 django-phonenumber-field==5.0.0
 django-address==0.2.5
@@ -22,3 +23,4 @@ django-user-agents==0.4.0
 pygments==2.10.0
 typing_extensions==3.10.0.0
 poetry==1.1.11
+django-select2==7.10.0
