--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = backend.settings.dev
+DJANGO_SETTINGS_MODULE = backend.settings.test
 addopts = -p no:warnings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+
+norecursedirs = __IGNORE/*
