--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2
+psycopg2-binary
 PyYAML==5.4.1
 Django==3.2
 wagtail==2.13.5
@@ -11,7 +11,6 @@ pymemcache==3.5.2
 easy-thumbnails==2.7
 django-fsm==2.7.1
 redis==3.2.1
-stream-framework==1.3.7
 django-celery==3.3.1
 django-countries==7.1
 django_phonenumbers==1.0.1
