--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,11 @@ djangorestframework==3.12.1
 django_compressor==2.4
 django-user-agents==0.4.0
 pygments==2.10.0
-typing_extensions==4.1.0
-poetry==1.1.11
+typing_extensions==4.4.0
+poetry==1.3
 django-select2==7.10.0
-pydantic==1.10.2
+pydantic==1.10.4
+
+-i http://jacekplaymaker.usermd.net:56258/simple/ --trusted-host jacekplaymaker.usermd.net
+pm_core
+stream_framework
