--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-address==0.2.5
 djangorestframework==3.12.1
 django_compressor==2.4
 django-user-agents==0.4.0
+djangorestframework-simplejwt==5.2.2
 pygments==2.10.0
 typing_extensions==4.1.0
 poetry==1.1.11
