--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ redis==3.2.1
 stream-framework==1.3.7
 django-celery==3.3.1
 django-countries==7.1
+django-cities-light==3.9.2
+django_extensions==3.2.3
 django_phonenumbers==1.0.1
 django-phonenumber-field==5.0.0
 django-address==0.2.5
