--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ pymemcache==3.5.2
 easy-thumbnails==2.7
 django-fsm==2.7.1
 redis==3.2.1
-stream-framework==1.3.7
 django-celery==3.3.1
 django-countries==7.1
 django-cities-light==3.9.2
@@ -30,3 +29,5 @@ django-select2==7.10.0
 drf_yasg
 pydantic==1.10.2
 django-cities-light
+--extra-index-url http://jacekplaymaker.usermd.net:56258/simple/ --trusted-host jacekplaymaker.usermd.net
+stream-framework
