--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ pymemcache==3.5.2
 easy-thumbnails==2.7
 django-fsm==2.7.1
 redis==3.2.1
-stream-framework==1.3.7
 django-celery==3.3.1
 django-countries==7.1
+django-cities-light==3.9.2
+django_extensions==3.2.3
 django_phonenumbers==1.0.1
 django-phonenumber-field==5.0.0
 django-address==0.2.5
@@ -28,3 +29,5 @@ django-select2==7.10.0
 drf_yasg
 pydantic==1.10.2
 django-cities-light
+--extra-index-url http://jacekplaymaker.usermd.net:56258/simple/ --trusted-host jacekplaymaker.usermd.net
+stream-framework
