--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,76 @@
-psycopg2
-PyYAML>=5.4.1
-Django~=3.2
-django-cors-headers==3.4.0
-django-allauth==0.42.0
-django-crispy-forms==1.9.2
-#wagtail-blog==2.3.5
-#wagtail-metadata==3.4.0
-pymemcache==3.5.2
-easy-thumbnails==2.7
-django-fsm==2.7.1
-redis==3.2.1
-django-celery==3.3.1
-django-countries==7.1
-django-cities-light==3.9.2
-django_extensions==3.2.3
-django_phonenumbers==1.0.1
-django-phonenumber-field==5.0.0
-django-address==0.2.5
-djangorestframework==3.12.1
-django-user-agents==0.4.0
-djangorestframework-simplejwt==5.2.2
-django-filter>=23.2
-pygments==2.10.0
-typing_extensions==4.1.0
-poetry==1.1.11
-django-select2==7.10.0
-drf_yasg
-pydantic==1.10.2
-drf_spectacular
-drf_spectacular_sidecar
---extra-index-url http://jacekplaymaker.usermd.net:56258/simple/ --trusted-host jacekplaymaker.usermd.net
-pm_core
+--trusted-host jacekplaymaker.usermd.net:56258
+--extra-index-url http://jacekplaymaker.usermd.net:56258/simple
+
+asgiref==3.7.2 ; python_version >= "3.8" and python_version < "4.0"
+attrs==22.2.0 ; python_version >= "3.8" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.8" and python_version < "4.0"
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.8" and python_version < "4.0"
+django-address==0.2.5 ; python_version >= "3.8" and python_version < "4.0"
+django-allauth==0.42.0 ; python_version >= "3.8" and python_version < "4.0"
+django-appconf==1.0.5 ; python_version >= "3.8" and python_version < "4.0"
+django-autoslug==1.9.9 ; python_version >= "3.8" and python_version < "4.0"
+django-cities-light==3.9.2 ; python_version >= "3.8" and python_version < "4.0"
+django-cors-headers==3.4.0 ; python_version >= "3.8" and python_version < "4.0"
+django-countries==7.1 ; python_version >= "3.8" and python_version < "4.0"
+django-crispy-forms==1.14.0 ; python_version >= "3.8" and python_version < "4.0"
+django-extensions==3.2.3 ; python_version >= "3.8" and python_version < "4.0"
+django-filter==23.2 ; python_version >= "3.8" and python_version < "4.0"
+django-fsm==2.7.1 ; python_version >= "3.8" and python_version < "4.0"
+django-phonenumber-field==5.0.0 ; python_version >= "3.8" and python_version < "4.0"
+django-phonenumbers==1.0.1 ; python_version >= "3.8" and python_version < "4.0"
+django-select2==7.11.1 ; python_version >= "3.8" and python_version < "4.0"
+django-user-agents==0.4.0 ; python_version >= "3.8" and python_version < "4.0"
+django==3.2 ; python_version >= "3.8" and python_version < "4.0"
+djangorestframework-simplejwt==5.2.2 ; python_version >= "3.8" and python_version < "4.0"
+djangorestframework==3.12.1 ; python_version >= "3.8" and python_version < "4.0"
+drf-spectacular-sidecar==2023.9.1 ; python_version >= "3.8" and python_version < "4.0"
+drf-spectacular==0.26.4 ; python_version >= "3.8" and python_version < "4.0"
+drf-yasg==1.21.7 ; python_version >= "3.8" and python_version < "4.0"
+easy-thumbnails==2.8.5 ; python_version >= "3.8" and python_version < "4.0"
+exceptiongroup==1.1.3 ; python_version >= "3.8" and python_version < "3.11"
+idna==3.4 ; python_version >= "3.8" and python_version < "4.0"
+importlib-resources==6.0.1 ; python_version >= "3.8" and python_version < "3.9"
+inflection==0.5.1 ; python_version >= "3.8" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.8" and python_version < "4.0"
+jsonschema-specifications==2023.7.1 ; python_version >= "3.8" and python_version < "4.0"
+jsonschema==4.19.0 ; python_version >= "3.8" and python_version < "4.0"
+numpy==1.24.4 ; python_version >= "3.8" and python_version < "3.9"
+numpy==1.25.2 ; python_version >= "3.9" and python_version < "4.0"
+oauthlib==3.2.2 ; python_version >= "3.8" and python_version < "4.0"
+packaging==23.0 ; python_version >= "3.8" and python_version < "4.0"
+pandas==1.5.3 ; python_version >= "3.8" and python_version < "4.0"
+phonenumbers==8.13.20 ; python_version >= "3.8" and python_version < "4.0"
+pillow==10.0.0 ; python_version >= "3.8" and python_version < "4.0"
+pkgutil-resolve-name==1.3.10 ; python_version >= "3.8" and python_version < "3.9"
+pluggy==1.0.0 ; python_version >= "3.8" and python_version < "4.0"
+pm-core==1.0.0 ; python_version >= "3.8" and python_version < "4.0"
+progressbar2==4.2.0 ; python_version >= "3.8" and python_version < "4.0"
+psycopg2==2.9.7 ; python_version >= "3.8" and python_version < "4.0"
+pydantic==1.10.4 ; python_version >= "3.8" and python_version < "4.0"
+pygments==2.16.1 ; python_version >= "3.8" and python_version < "4.0"
+pyjwt==2.8.0 ; python_version >= "3.8" and python_version < "4.0"
+pytest==7.2.0 ; python_version >= "3.8" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
+python-dotenv==0.21.0 ; python_version >= "3.8" and python_version < "4.0"
+python-utils==3.5.2 ; python_version >= "3.8" and python_version < "4.0"
+python3-openid==3.2.0 ; python_version >= "3.8" and python_version < "4.0"
+pytz==2023.3.post1 ; python_version >= "3.8" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.8" and python_version < "4.0"
+referencing==0.30.2 ; python_version >= "3.8" and python_version < "4.0"
+requests-mock==1.10.0 ; python_version >= "3.8" and python_version < "4.0"
+requests-oauthlib==1.3.1 ; python_version >= "3.8" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.8" and python_version < "4"
+rpds-py==0.10.2 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==68.2.0 ; python_version >= "3.8" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.8" and python_version < "4.0"
+sqlparse==0.4.4 ; python_version >= "3.8" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.11"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "4.0"
+ua-parser==0.18.0 ; python_version >= "3.8" and python_version < "4.0"
+unidecode==1.3.6 ; python_version >= "3.8" and python_version < "4.0"
+uritemplate==4.1.1 ; python_version >= "3.8" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.8" and python_version < "4.0"
+user-agents==2.2.0 ; python_version >= "3.8" and python_version < "4.0"
+zipp==3.16.2 ; python_version >= "3.8" and python_version < "3.9"
