--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ pydantic==1.10.4 ; python_version >= "3.8" and python_version < "4.0"
 pygments==2.16.1 ; python_version >= "3.8" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.8" and python_version < "4.0"
 pytest==7.2.0 ; python_version >= "3.8" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.8" and python_version < "4.0"
 python-utils==3.5.2 ; python_version >= "3.8" and python_version < "4.0"
 python3-openid==3.2.0 ; python_version >= "3.8" and python_version < "4.0"
