--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ django-phonenumber-field==5.0.0 ; python_version >= "3.8" and python_version < "
 django-phonenumbers==1.0.1 ; python_version >= "3.8" and python_version < "4.0"
 django-select2==7.11.1 ; python_version >= "3.8" and python_version < "4.0"
 django-user-agents==0.4.0 ; python_version >= "3.8" and python_version < "4.0"
-django==3.2 ; python_version >= "3.8" and python_version < "4.0"
+django==3.2.21 ; python_version >= "3.8" and python_version < "4.0"
 djangorestframework-simplejwt==5.2.2 ; python_version >= "3.8" and python_version < "4.0"
 djangorestframework==3.12.1 ; python_version >= "3.8" and python_version < "4.0"
 drf-spectacular-sidecar==2023.9.1 ; python_version >= "3.8" and python_version < "4.0"
@@ -48,6 +48,7 @@ psycopg2==2.9.7 ; python_version >= "3.8" and python_version < "4.0"
 pydantic==1.10.4 ; python_version >= "3.8" and python_version < "4.0"
 pygments==2.16.1 ; python_version >= "3.8" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.8" and python_version < "4.0"
+pymemcache==4.0.0 ; python_version >= "3.8" and python_version < "4.0"
 pytest==7.2.0 ; python_version >= "3.8" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.8" and python_version < "4.0"
