--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ max-line-length = 88
 
 [tool.isort]
 profile = "black"
+multi_line_output=3
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "backend.settings.test"
