--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ pymemcache = "^4.0.0"
 django-debug-toolbar = "2.2"
 pytest-django = "^4.5.2"
 pytest-sugar = "^0.9.7"
+django-test-migrations = "1.3.0"
 factory-boy = "3.2.1"
 pre-commit = "3.3.1"
 parameterized = "^0.9.0"
