--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ drf-yasg = "^1.21.7"
 django-select2 = "^7.10"
 python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
+django-cleanup = "^8.0.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
