--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ django-cleanup = "^8.0.0"
 django-debug-toolbar = "2.2"
 pytest-django = "^4.5.2"
 pytest-sugar = "^0.9.7"
+pytest-mock = "*"
 django-test-migrations = "1.3.0"
 factory-boy = "3.2.1"
 pre-commit = "3.3.1"
