--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,23 +34,24 @@ django-extensions = "3.2.3"
 easy-thumbnails = "^2.8.5"
 django-user-agents = "^0.4.0"
 django-phonenumber-field = "5.0.0"
+django-cleanup = "^8.0.0"
 django-address = "0.2.5"
 djangorestframework = "3.12.1"
 djangorestframework-simplejwt = "5.2.2"
 django-cors-headers = "3.4.0"
 django-allauth = "0.42.0"
 drf-spectacular = "^0.26.4"
+drf-yasg = "^1.21.7"
 drf-spectacular-sidecar = "^2023.9.1"
+django-select2 = "^7.10"
 pm-core = {version = "^1.0.0", source = "pm"}
 django-filter = "^23.2"
 psycopg2-binary = "^2.9.7"
 pygments = "^2.1"
 django-crispy-forms = "^1.9"
-drf-yasg = "^1.21.7"
-django-select2 = "^7.10"
 python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
-django-cleanup = "^8.0.0"
+ipython = "^8.12.3"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
