--- a/requirements.txt
+++ b/requirements.txt
@@ -72,3 +72,4 @@ uritemplate==4.1.1 ; python_version >= "3.8" and python_version < "4.0"
 urllib3==1.26.13 ; python_version >= "3.8" and python_version < "4.0"
 user-agents==2.2.0 ; python_version >= "3.8" and python_version < "4.0"
 zipp==3.16.2 ; python_version >= "3.8" and python_version < "3.9"
+ipython==8.12.3 ; python_version >= "3.8" and python_version < "3.9"
