--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ django-crispy-forms = "^1.9"
 python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
 ipython = "^8.12.3"
+sentry-sdk = "^1.39.1"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
