--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,4 @@ urllib3==1.26.13 ; python_version >= "3.8" and python_version < "4.0"
 user-agents==2.2.0 ; python_version >= "3.8" and python_version < "4.0"
 zipp==3.16.2 ; python_version >= "3.8" and python_version < "3.9"
 ipython==8.12.3 ; python_version >= "3.8" and python_version < "3.9"
+sentry-sdk==1.39.1 ; python_version >= "3.8" and python_version < "3.9"
