PM20-1002: Changes in project initialization setup.

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -9,3 +9,9 @@ ENVIRONMENT=localhost
 # Sentry
 ENABLE_SENTRY=False
 SENTRY_DSN=
+
+# DB
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=local_pm
+POSTGRES_PORT=5432
