--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ factory-boy = "3.2.1"
 pre-commit = "3.3.1"
 parameterized = "^0.9.0"
 black = "^23.9.0"
+isort = "^5.13.2"
+flake8="^7.0.0"
 
 
 [[tool.poetry.source]]
