--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -18,3 +18,13 @@ POSTGRES_PORT=5432
 
 # FRONTEND URL
 FRONTEND_BASE_URL=
+
+TPAY__BASE_URL=
+TPAY__CREDENTIALS__CLIENT_ID=
+TPAY__CREDENTIALS__CLIENT_SECRET=
+TPAY__CREDENTIALS__SCOPE="read write"
+TPAY__CALLBACKS__REDIRECT__SUCCESS=http://playmaker.pro/payment/success
+TPAY__CALLBACKS__REDIRECT__ERROR=http://playmaker.pro/payment/error
+TPAY__CALLBACKS__NOTIFICATION__EMAIL=
+TPAY__CALLBACKS__NOTIFICATION__RESULT_URL=
+TPAY__SECURITY_CODE=
