post-review fixes

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -28,3 +28,4 @@ TPAY__CALLBACKS__REDIRECT__ERROR=http://playmaker.pro/payment/error
 TPAY__CALLBACKS__NOTIFICATION__EMAIL=
 TPAY__CALLBACKS__NOTIFICATION__RESULT_URL=
 TPAY__SECURITY_CODE=
+TPAY__TEST_MODE=False
