Added field that describe current user inquiry limit. Changed callback urls.

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -23,8 +23,8 @@ TPAY__BASE_URL=
 TPAY__CREDENTIALS__CLIENT_ID=
 TPAY__CREDENTIALS__CLIENT_SECRET=
 TPAY__CREDENTIALS__SCOPE="read write"
-TPAY__CALLBACKS__REDIRECT__SUCCESS=http://playmaker.pro/payment/success
-TPAY__CALLBACKS__REDIRECT__ERROR=http://playmaker.pro/payment/error
+TPAY__CALLBACKS__REDIRECT__SUCCESS=https://playmaker.pro/platnosc?success=true
+TPAY__CALLBACKS__REDIRECT__ERROR=https://playmaker.pro/platnosc?success=false
 TPAY__CALLBACKS__NOTIFICATION__EMAIL=
 TPAY__CALLBACKS__NOTIFICATION__RESULT_URL=
 TPAY__SECURITY_CODE=
