--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,7 @@ priority = "supplemental"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 88
+select = ["E4", "E7", "E9", "F", "B", "Q"]
