--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,3 +80,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 line-length = 88
 select = ["E4", "E7", "E9", "F", "B", "Q"]
+ignore = ["B009"]
