--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.flake8]
 max-line-length = 88
+exclude = "*/migrations/*, requirements.txt, requirements.dev.txt, swagger.yml"
 
 [tool.isort]
 profile = "black"
@@ -20,11 +21,11 @@ line-length = 88
 name = "backend"
 version = "2.3.3"
 description = ""
-authors = ["rkesik <rafal.kesik@gmail.com>"]
+authors = ["rkesik <rafal.kesik@gmail.com>", "bartnyk <jakub@bartnyk.pl>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8.10"
+python = ">=3.8.10,<3.9"
 Django = "^3.2"
 django-fsm = "2.7.1"
 django-countries = "7.1"
@@ -53,6 +54,7 @@ python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
 ipython = "^8.12.3"
 sentry-sdk = "^1.39.1"
+djangorestframework-yaml = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
