--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,10 @@ python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
 ipython = "^8.12.3"
 sentry-sdk = "^1.39.1"
+celery = "^5.4.0"
+redis = "^5.2.1"
 djangorestframework-yaml = "^2.0.0"
+django-redis = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
