--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,10 @@ python-dateutil = "^2.8.2"
 pymemcache = "^4.0.0"
 ipython = "^8.12.3"
 sentry-sdk = "^1.39.1"
+celery = "^5.4.0"
+redis = "^5.2.1"
 djangorestframework-yaml = "^2.0.0"
+django-redis = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
@@ -81,5 +84,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 88
-select = ["E4", "E7", "E9", "F", "B", "Q"]
-ignore = ["B009", "E731"]
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "B", "Q", "I"]
+ignore = ["B009", "E731", "COM812"]
