ref featured with custom codes

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -6,7 +6,7 @@ SCRAPPER__BASE_URL=http://localhost:8080/
 # Base conf
 ENVIRONMENT=development
 
-# Sentry
+# SENTRY
 ENABLE_SENTRY=False
 SENTRY_DSN=
 
@@ -16,9 +16,10 @@ POSTGRES__PASSWORD=postgres
 POSTGRES__DB=local_pm
 POSTGRES__PORT=5432
 
-# FRONTEND URL
-FRONTEND_BASE_URL=
+# WEBAPP
+WEBAPP__BASE_URL=https://playmaker.pro/
 
+# TPAY GATEWAY
 TPAY__BASE_URL=
 TPAY__CREDENTIALS__CLIENT_ID=
 TPAY__CREDENTIALS__CLIENT_SECRET=
