--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,13 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 88
+indent-width = 4
 
 [tool.ruff.lint]
-select = ["E4", "E7", "E9", "F", "B", "Q", "I"]
-ignore = ["B009", "E731", "COM812"]
+extend-select = ["I", "E4", "E7", "E9", "F", "B", "Q"]
+ignore = ["E731", "E741", "F821", "B904", "E722"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "auto"
