--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,8 +87,8 @@ line-length = 88
 indent-width = 4
 
 [tool.ruff.lint]
-extend-select = ["I", "E4", "E7", "E9", "F", "B", "Q"]
-ignore = ["E731", "E741", "F821", "B904", "E722"]
+extend-select = ["I", "E4", "E7", "E9", "F"]
+ignore = ["E731", "E741", "F821", "B904", "E722", "F405", "F403"]
 
 [tool.ruff.format]
 quote-style = "double"
