Refactor profiles models and tasks to improve premium profile handling
- Added a `products` property to `BaseProfile` for better access to premium products.
- Updated `is_promoted`, `promotion`, `is_premium`, `premium`, `premium_already_tested`, and `has_premium_inquiries` properties to use the new `products` property.
- Introduced a `setup_premium_profile` method in `BaseProfile` to streamline premium profile setup.
- Removed unnecessary database refresh calls in `post_create_profile_tasks`.
- Updated tests in `test_profile_api.py` and `test_profile_list_api.py` to reflect changes in profile handling.
- Added new fixtures for user and profile creation to enhance test coverage.
- Cleaned up factory methods in `profiles_factories.py` to improve readability and maintainability.
- Introduced utility functions for generating random data in tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ multi_line_output = 3
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "backend.settings.test"
 addopts = "-p no:warnings"
-# -- recommended but optional:
+env = [{ ENVIRONMENT = "test" }]
+pytest_plugins = "utils.fixtures"
+
+
 python_files = "tests/* test/*"
 norecursedirs = "__IGNORE/*"
-
 [tool.black]
 include = '\.py$'
 line-length = 88
