--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ exclude = "*/migrations/*, requirements.txt, requirements.dev.txt, swagger.yml"
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+ignore_init_module_imports = true
+
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "backend.settings.test"
@@ -92,8 +94,13 @@ indent-width = 4
 [tool.ruff.lint]
 extend-select = ["I", "E4", "E7", "E9", "F"]
 ignore = ["E731", "E741", "F821", "B904", "E722", "F405", "F403"]
+ignore-init-module-imports = true
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
 line-ending = "auto"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402"]
+"**/{tests,docs,tools}/*" = ["E402"]
