feature/tracking-user-daily-login

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -44,3 +44,11 @@ SMTP__PORT=
 SMTP__OUTGOING_ADDRESS=
 SMTP__PASSWORD=
 SMTP__USE_TLS=True
+
+# MongoDB Configuration
+MONGODB__HOST=
+MONGODB__PORT=
+MONGODB__DB=
+MONGODB__USERNAME=
+MONGODB__PASSWORD=
+MONGODB__AUTH_SOURCE=
