--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -17,6 +17,7 @@ identify==2.6.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
 iniconfig==2.0.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 isort==5.13.2 ; python_full_version >= "3.8.10" and python_version < "3.9"
 mccabe==0.7.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
+mongomock==4.3.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 mypy-extensions==1.0.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 nodeenv==1.9.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
 packaging==23.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
