--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,8 @@ pydantic==1.10.4 ; python_full_version >= "3.8.10" and python_version < "3.9"
 pygments==2.19.1 ; python_full_version >= "3.8.10" and python_version < "3.9"
 pyjwt==2.9.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 pymemcache==4.0.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
+pymongo==4.7.3 ; python_full_version >= "3.8.10" and python_version < "3.9"
+mongoengine==0.27.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 pytest==7.2.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 python-crontab==3.2.0 ; python_full_version >= "3.8.10" and python_version < "3.9"
 python-dateutil==2.9.0.post0 ; python_full_version >= "3.8.10" and python_version < "3.9"
