--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ djangorestframework-yaml = "^2.0.0"
 django-redis = "^5.4.0"
 django-celery-beat = "^2.8.0"
 dotenv = "^0.9.9"
+pymongo = "4.7.3"
+mongoengine = "0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
@@ -77,6 +79,7 @@ parameterized = "^0.9.0"
 black = "^23.9.0"
 isort = "^5.13.2"
 flake8 = "^7.0.0"
+mongomock = "^4.3.0"
 
 
 [[tool.poetry.source]]
