feat: enhance mailing functionality with improved email handling and new configuration options

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -37,3 +37,10 @@ REDIS__PORT=6379
 REDIS__DB=0
 REDIS__USERNAME=
 REDIS__PASSWORD=
+
+# MAIL
+MAIL__HOST=
+MAIL__PORT=
+MAIL__OUTGOING_ADDRESS=
+MAIL__PASSWORD=
+MAIL__USE_TLS=True
