fix: changed config variable `mail` to `smtp`

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -39,8 +39,8 @@ REDIS__USERNAME=
 REDIS__PASSWORD=
 
 # MAIL
-MAIL__HOST=
-MAIL__PORT=
-MAIL__OUTGOING_ADDRESS=
-MAIL__PASSWORD=
-MAIL__USE_TLS=True
+SMTP__HOST=
+SMTP__PORT=
+SMTP__OUTGOING_ADDRESS=
+SMTP__PASSWORD=
+SMTP__USE_TLS=True
