--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ redis = "^5.2.1"
 djangorestframework-yaml = "^2.0.0"
 django-redis = "^5.4.0"
 django-celery-beat = "^2.8.0"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
