feat: Add Slack integration for error notifications and update configuration

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -53,3 +53,8 @@ MONGODB__USERNAME=
 MONGODB__PASSWORD=
 MONGODB__AUTH_SOURCE=
 MONGODB__ENABLED=
+
+# Slack integration
+SLACK__OAUTH_TOKEN=
+SLACK__ERROR_NOTIFICATION_CHANNEL=
+SLACK__ENABLED=
