--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ django-celery-beat = "^2.8.0"
 dotenv = "^0.9.9"
 pymongo = "4.7.3"
 mongoengine = "0.27.0"
+slack-sdk = "^3.36.0"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
