--- a/.dockerignore
+++ b/.dockerignore
@@ -37,3 +37,30 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Docker related
+.git/
+.gitignore
+README.md
+*.md
+docker-compose.override.yml
+Dockerfile*
+.dockerignore
+
+# Logs and temporary files
+_logs/
+celerybeat.pid
+*.log
+
+# Environment files
+.env
+.venv
+ENV/
+env.bak/
+venv.bak/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
