feat: Add Amazon SES configuration and integrate with email sending tasks

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -59,3 +59,11 @@ MONGODB__ENABLED=
 SLACK__OAUTH_TOKEN=
 SLACK__ERROR_NOTIFICATION_CHANNEL=
 SLACK__ENABLED=
+
+# Amazon SES Configuration
+SES__HOST=
+SES__PORT=587
+SES__USERNAME=
+SES__PASSWORD=
+SES__USE_TLS=True
+SES__ENABLED=False
