--- a/tools/supervisord.conf
+++ b/tools/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 user=root
 nodaemon=true
-logfile=/app/_logs/supervisord.log
+logfile=/app/.logs/supervisord.log
 
 [program:django]
 command=python manage.py runserver 0.0.0.0:8000
