--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dotenv = "^0.9.9"
 pymongo = "4.7.3"
 mongoengine = "0.27.0"
 slack-sdk = "^3.36.0"
+cryptography = "40"
 
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "2.2"
